Change how Wflow class is instantiated

--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "efe86f57",
+   "id": "db7cad38",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db980d5d",
+   "id": "b81fb141",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0da8f0c",
+   "id": "e9dacd51",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1265ae48",
+   "id": "31f24d8d",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "813d5e3c",
+   "id": "9dcedc16",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -71,107 +71,52 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "21fede55",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ewatercycle.models import Wflow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "0a6ba86a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = Wflow()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "f23be3bf",
+   "id": "c5fad4b8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NotImplementedError",
-     "evalue": "No default parameters available for wflow. To see the parameters, first run setup with a valid .ini file.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-60da212f06f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/ewatercycle/ewatercycle/ewatercycle/models/wflow.py\u001b[0m in \u001b[0;36mparameters\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    123\u001b[0m         \u001b[0;34m\"\"\"List the configurable parameters for this model.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"cfg\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 125\u001b[0;31m             raise NotImplementedError(\n\u001b[0m\u001b[1;32m    126\u001b[0m                 \u001b[0;34m\"No default parameters available for wflow. To see the \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    127\u001b[0m                 \"parameters, first run setup with a valid .ini file.\")\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: No default parameters available for wflow. To see the parameters, first run setup with a valid .ini file."
-     ]
-    }
-   ],
-   "source": [
-    "model.parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "21254968",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Working directory created: /home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151912\n",
-      "Created /home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151912/wflow_ewatercycle.ini.\n",
-      "Started wflow container with working directory /home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151912\n"
+      "/home/peter/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/_warnings.py:18: UserWarning: \n",
+      "  Thank you for trying out the new ESMValCore API.\n",
+      "  Note that this API is experimental and may be subject to change.\n",
+      "  More info: https://github.com/ESMValGroup/ESMValCore/issues/498\n",
+      "/home/peter/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:254: ESMValToolDeprecationWarning: `write_plots` will be removed in 2.4.0.\n",
+      "/home/peter/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:255: ESMValToolDeprecationWarning: `write_netcdf` will be removed in 2.4.0.\n"
      ]
-    }
-   ],
-   "source": [
-    "# This should work for a well-defined example case\n",
-    "# cfg_dir, cfg_file = model.setup(cfg_dir='wflow_example_case/', cfg_file='./wflow_example_case/wflow_sbm.ini')\n",
-    "\n",
-    "# You can also add custom settings to overwrite whatever is in the cfg_file. \n",
-    "# This is useful, as the WFLOW version we're using is inconsistent with the example config file. We need to add the RiverRunoff variable to the API section in the .ini-file:\n",
-    "cfg_file, cfg_dir = model.setup(cfg_dir='wflow_example_case/', cfg_file='./wflow_example_case/wflow_sbm.ini', API={\"RiverRunoff\": \"2, m^3/s\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "594e353f",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151912/wflow_ewatercycle.ini'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151912'))"
+       "['2019.1', '2020.1']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cfg_file, cfg_dir"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ca227c42",
-   "metadata": {},
-   "source": [
-    "The `config_file` that is returned by `setup(...)` can be used to initialize the model:"
+    "import ewatercycle.models\n",
+    "ewatercycle.models.Wflow.available_versions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5bfdb164",
+   "execution_count": 3,
+   "id": "fa85b9fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ewatercycle.models.Wflow(version='2019.1', parameter_set=\"./wflow_example_case/\", forcing=None)\n",
+    "# model = ewatercycle.models.Wflow(version='2019.1', parameter_set=\"./wflow_example_case/\", forcing=\"./wflow_example_case/inmaps/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5b1cd110",
    "metadata": {},
    "outputs": [
     {
@@ -325,8 +270,46 @@
        " ('API.River', '3, -'),\n",
        " ('API.DLC', '3, m'),\n",
        " ('API.IF', '0,m^3/s'),\n",
-       " ('API.timestepsecs', '3, s'),\n",
-       " ('API.RiverRunoff', '2, m^3/s')]"
+       " ('API.timestepsecs', '3, s')]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "eab538e0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This should work for a well-defined example case\n",
+    "# cfg_dir, cfg_file = model.setup(cfg_dir='wflow_example_case/', cfg_file='./wflow_example_case/wflow_sbm.ini')\n",
+    "\n",
+    "# You can also add custom settings to overwrite whatever is in the cfg_file. \n",
+    "# This is useful, as the WFLOW version we're using is inconsistent with the example config file. We need to add the RiverRunoff variable to the API section in the .ini-file:\n",
+    "cfg_file, cfg_dir = model.setup(API={\"RiverRunoff\": \"2, m^3/s\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c0fd60e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210510_164833/wflow_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210510_164833'))"
       ]
      },
      "execution_count": 6,
@@ -335,13 +318,12 @@
     }
    ],
    "source": [
-    "# Print a list of currently used parameters\n",
-    "model.parameters"
+    "cfg_file, cfg_dir"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "302e7fdb",
+   "id": "28c73f0d",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -350,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e4afa09b",
+   "id": "136a81db",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6165cea9",
+   "id": "04d81a02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dadbffba",
+   "id": "7a93df74",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b689c7cb",
+   "id": "8eddebf7",
    "metadata": {
     "tags": []
    },
@@ -871,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a5534765",
+   "id": "3de5d8cb",
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "70247969",
+   "id": "025e11a6",
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6e743881",
+   "id": "2338e28f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6a8a8800",
+   "id": "02a57705",
    "metadata": {},
    "outputs": [],
    "source": [
