--- a/examples/MarrmotM01.ipynb
+++ b/examples/MarrmotM01.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "forcing_file = Path('./BMI_testcase_m01_BuffaloRiver_TN_USA.mat')"
+    "parameter_set = Path('./BMI_testcase_m01_BuffaloRiver_TN_USA.mat')"
    ]
   },
   {
@@ -37,8 +37,9 @@
    "outputs": [],
    "source": [
     "from ewatercycle.parametersetdb.datafiles import SubversionCopier\n",
+    "# TODO fix this\n",
     "copier = SubversionCopier('https://github.com/wknoben/MARRMoT/trunk/BMI/Config/BMI_testcase_m01_BuffaloRiver_TN_USA.mat')\n",
-    "copier.save(forcing_file)"
+    "copier.save(parameter_set)"
    ]
   },
   {
@@ -55,8 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3f7b296d",
+   "execution_count": 2,
+   "id": "f4164f44-96dd-40d5-a108-8eafbf05db1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "836b4415",
    "metadata": {},
    "outputs": [],
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2a96ba9d",
    "metadata": {},
    "outputs": [],
@@ -99,54 +100,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "134099ac",
+   "execution_count": null,
+   "id": "4e76dea2-ec87-4ab2-a0ab-cc138b06caa1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/_warnings.py:18: UserWarning: \n",
-      "  Thank you for trying out the new ESMValCore API.\n",
-      "  Note that this API is experimental and may be subject to change.\n",
-      "  More info: https://github.com/ESMValGroup/ESMValCore/issues/498\n",
-      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:254: ESMValToolDeprecationWarning: `write_plots` will be removed in 2.4.0.\n",
-      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:255: ESMValToolDeprecationWarning: `write_netcdf` will be removed in 2.4.0.\n",
-      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_validated_config.py:80: MissingConfigParameter: `drs` is not defined (https://docs.esmvaltool.org/projects/ESMValCore/en/latest/quickstart/configure.html)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from ewatercycle.models import MarrmotM01"
+    "import ewatercycle.models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "0a4c839c",
+   "execution_count": 6,
+   "id": "5f0f7a32-0b64-4de6-9074-13749d5efa4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2020.11']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model = MarrmotM01()"
+    "ewatercycle.models.MarrmotM01.available_versions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "0a4c839c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ewatercycle.models.marrmot.MarrmotM01 at 0x7f8fb8224700>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = ewatercycle.models.MarrmotM01(version='2020.11', parameter_set=parameter_set)\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "6bfc1dc0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('maximum_soil_moisture_storage', 1000.0),\n",
-       " ('initial_soil_moisture_storage', 900.0),\n",
+       "[('maximum_soil_moisture_storage', array([10.])),\n",
+       " ('initial_soil_moisture_storage', array([5.])),\n",
        " ('solver',\n",
-       "  Solver(name='createOdeApprox_IE', resnorm_tolerance=0.1, resnorm_maxiter=6.0))]"
+       "  array([[(array(['createOdeApprox_IE'], dtype='<U18'), array([[0.1]]), array([[6.]]))]],\n",
+       "        dtype=[('name', 'O'), ('resnorm_tolerance', 'O'), ('resnorm_maxiter', 'O')])),\n",
+       " ('forcing_file', PosixPath('BMI_testcase_m01_BuffaloRiver_TN_USA.mat'))]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,25 +179,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4ef7a691",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/verhoes/git/eWaterCycle/ewatercycle/examples/marrmot_20210419_135246/marrmot-m01_config.mat'),\n",
-       " PosixPath('/home/verhoes/git/eWaterCycle/ewatercycle/examples/marrmot_20210419_135246'))"
+       "(PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210510_214901/marrmot-m01_config.mat'),\n",
+       " PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210510_214901'))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cfg_file, cfg_dir = model.setup(\n",
-    "    forcing=forcing_file,\n",
     "    maximum_soil_moisture_storage=1234.0,\n",
     ")\n",
     "cfg_file, cfg_dir"
@@ -183,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "5ac41a70",
    "metadata": {},
    "outputs": [
@@ -197,7 +218,7 @@
        " ('forcing_file', PosixPath('BMI_testcase_m01_BuffaloRiver_TN_USA.mat'))]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
