remove parameterset from the constructor, add default values for parameters

--- a/examples/MarrmotM01.ipynb
+++ b/examples/MarrmotM01.ipynb
@@ -21,12 +21,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e1706613",
+   "id": "43b7d118-1643-436e-b37f-f2165d185420",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "parameter_set = Path('./BMI_testcase_m01_BuffaloRiver_TN_USA.mat')"
+    "forcing_file = Path('./BMI_testcase_m01_BuffaloRiver_TN_USA.mat')"
    ]
   },
   {
@@ -39,7 +39,7 @@
     "from ewatercycle.parametersetdb.datafiles import SubversionCopier\n",
     "# TODO fix this\n",
     "copier = SubversionCopier('https://github.com/wknoben/MARRMoT/trunk/BMI/Config/BMI_testcase_m01_BuffaloRiver_TN_USA.mat')\n",
-    "copier.save(parameter_set)"
+    "copier.save(forcing_file)"
    ]
   },
   {
@@ -131,29 +131,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "0a4c839c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ewatercycle.models.marrmot.MarrmotM01 at 0x7f8fb8224700>"
+       "<ewatercycle.models.marrmot.MarrmotM01 at 0x7f8d23d44f10>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = ewatercycle.models.MarrmotM01(version='2020.11', parameter_set=parameter_set)\n",
+    "model = ewatercycle.models.MarrmotM01(version='2020.11', forcing=forcing_file)\n",
     "model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6bfc1dc0",
    "metadata": {},
    "outputs": [
@@ -163,12 +163,11 @@
        "[('maximum_soil_moisture_storage', array([10.])),\n",
        " ('initial_soil_moisture_storage', array([5.])),\n",
        " ('solver',\n",
-       "  array([[(array(['createOdeApprox_IE'], dtype='<U18'), array([[0.1]]), array([[6.]]))]],\n",
-       "        dtype=[('name', 'O'), ('resnorm_tolerance', 'O'), ('resnorm_maxiter', 'O')])),\n",
+       "  Solver(name='createOdeApprox_IE', resnorm_tolerance=array([0.1]), resnorm_maxiter=array([6.]))),\n",
        " ('forcing_file', PosixPath('BMI_testcase_m01_BuffaloRiver_TN_USA.mat'))]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
