--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db7cad38",
+   "id": "e1606936",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b81fb141",
+   "id": "91f320b8",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9dacd51",
+   "id": "30c2d7c6",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31f24d8d",
+   "id": "695ac732",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dcedc16",
+   "id": "62818976",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -70,29 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c5fad4b8",
+   "execution_count": 6,
+   "id": "66b0c823",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/peter/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/_warnings.py:18: UserWarning: \n",
-      "  Thank you for trying out the new ESMValCore API.\n",
-      "  Note that this API is experimental and may be subject to change.\n",
-      "  More info: https://github.com/ESMValGroup/ESMValCore/issues/498\n",
-      "/home/peter/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:254: ESMValToolDeprecationWarning: `write_plots` will be removed in 2.4.0.\n",
-      "/home/peter/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:255: ESMValToolDeprecationWarning: `write_netcdf` will be removed in 2.4.0.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "['2019.1', '2020.1']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,8 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "fa85b9fa",
+   "execution_count": 7,
+   "id": "e9c6b0e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,8 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "5b1cd110",
+   "execution_count": 8,
+   "id": "ba55ab18",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +261,7 @@
        " ('API.timestepsecs', '3, s')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,35 +272,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "eab538e0",
+   "execution_count": 10,
+   "id": "d86f1a5e",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# This should work for a well-defined example case\n",
-    "# cfg_dir, cfg_file = model.setup(cfg_dir='wflow_example_case/', cfg_file='./wflow_example_case/wflow_sbm.ini')\n",
-    "\n",
-    "# You can also add custom settings to overwrite whatever is in the cfg_file. \n",
-    "# This is useful, as the WFLOW version we're using is inconsistent with the example config file. We need to add the RiverRunoff variable to the API section in the .ini-file:\n",
-    "cfg_file, cfg_dir = model.setup(API={\"RiverRunoff\": \"2, m^3/s\"})"
+    "cfg_file, cfg_dir = model.setup(API = {\"RiverRunoff\": \"2, m^3/s\"})\n",
+    "cfg_file, cfg_dir = model.setup(run = {\"starttime\": \"1995-01-31 00:00:00 GMT\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "c0fd60e1",
+   "execution_count": 11,
+   "id": "3d7dafb8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210510_164833/wflow_ewatercycle.ini'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210510_164833'))"
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_112551/wflow_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_112551'))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,8 +306,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "49919219",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('API.RiverRunoff', '2, m^3/s')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can see that RiverRunoff has been added\n",
+    "model.parameters[-1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "28c73f0d",
+   "id": "26888044",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -332,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "136a81db",
+   "id": "9e7e4ed0",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "04d81a02",
+   "id": "6bd6c15d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7a93df74",
+   "id": "6b4d8e01",
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8eddebf7",
+   "id": "daa60c53",
    "metadata": {
     "tags": []
    },
@@ -853,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3de5d8cb",
+   "id": "3a822614",
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "025e11a6",
+   "id": "663f296f",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2338e28f",
+   "id": "8433ee3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "02a57705",
+   "id": "75febae7",
    "metadata": {},
    "outputs": [],
    "source": [
