re-run notebook locally

--- a/examples/MarrmotM01.ipynb
+++ b/examples/MarrmotM01.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2a96ba9d",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5f0f7a32-0b64-4de6-9074-13749d5efa4d",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "['2020.11']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,17 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0a4c839c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ewatercycle.models.marrmot.MarrmotM01 at 0x7f8d23d44f10>"
+       "<ewatercycle.models.marrmot.MarrmotM01 at 0x7f9eadb7e430>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6bfc1dc0",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        " ('forcing_file', PosixPath('BMI_testcase_m01_BuffaloRiver_TN_USA.mat'))]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,18 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "4ef7a691",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210510_214901/marrmot-m01_config.mat'),\n",
-       " PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210510_214901'))"
+       "(PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210511_114059/marrmot-m01_config.mat'),\n",
+       " PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210511_114059'))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "5ac41a70",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        " ('forcing_file', PosixPath('BMI_testcase_m01_BuffaloRiver_TN_USA.mat'))]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "7fe01b22",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "d6eea564",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "375de952",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
        " 'wb')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,17 +278,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "f49eabe1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4.16036419e-09])"
+       "array([1.72634888e-08])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "ec7992f4",
    "metadata": {},
    "outputs": [
@@ -658,26 +658,26 @@
        "  fill: currentColor;\n",
        "}\n",
        "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray &#x27;flux_out_Q&#x27; (latitude: 1, longitude: 1)&gt;\n",
-       "array([[4.16036419e-09]])\n",
+       "array([[1.72634888e-08]])\n",
        "Coordinates:\n",
        "  * longitude  (longitude) float64 87.49\n",
        "  * latitude   (latitude) float64 35.29\n",
-       "    time       object 1989-01-04 00:00:00\n",
+       "    time       object 1989-01-02 00:00:00\n",
        "Attributes:\n",
-       "    units:    mm day</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'flux_out_Q'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1</li><li><span class='xr-has-index'>longitude</span>: 1</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-2bf29257-3c93-4082-acac-68a05cc58b3a' class='xr-array-in' type='checkbox' checked><label for='section-2bf29257-3c93-4082-acac-68a05cc58b3a' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>4.16e-09</span></div><div class='xr-array-data'><pre>array([[4.16036419e-09]])</pre></div></div></li><li class='xr-section-item'><input id='section-cf33b521-f88e-4f09-8c77-fb4bab6b8e27' class='xr-section-summary-in' type='checkbox'  checked><label for='section-cf33b521-f88e-4f09-8c77-fb4bab6b8e27' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>87.49</div><input id='attrs-e35e371f-0088-4b9d-bf45-463ed3349aeb' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-e35e371f-0088-4b9d-bf45-463ed3349aeb' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-40a125aa-d8a0-4bc5-ab43-45bd2fa1b8b6' class='xr-var-data-in' type='checkbox'><label for='data-40a125aa-d8a0-4bc5-ab43-45bd2fa1b8b6' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([87.49])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>35.29</div><input id='attrs-7924f487-a009-4ad6-9cea-e21faa5289df' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-7924f487-a009-4ad6-9cea-e21faa5289df' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-1ae7a1c9-2f60-4e9b-8b1e-be25b9c4f606' class='xr-var-data-in' type='checkbox'><label for='data-1ae7a1c9-2f60-4e9b-8b1e-be25b9c4f606' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([35.29])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1989-01-04 00:00:00</div><input id='attrs-19775aaf-4587-4e6f-9158-aae2fe51476d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-19775aaf-4587-4e6f-9158-aae2fe51476d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-73c13434-351a-4e58-9bd8-8bf8517ffe29' class='xr-var-data-in' type='checkbox'><label for='data-73c13434-351a-4e58-9bd8-8bf8517ffe29' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1989, 1, 4, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-c86bc3db-c140-4cf7-a2d9-edc17d29e7e3' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c86bc3db-c140-4cf7-a2d9-edc17d29e7e3' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>mm day</dd></dl></div></li></ul></div></div>"
+       "    units:    mm day</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'flux_out_Q'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1</li><li><span class='xr-has-index'>longitude</span>: 1</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-5c545722-998c-45ff-a23a-088a7bb876af' class='xr-array-in' type='checkbox' checked><label for='section-5c545722-998c-45ff-a23a-088a7bb876af' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>1.726e-08</span></div><div class='xr-array-data'><pre>array([[1.72634888e-08]])</pre></div></div></li><li class='xr-section-item'><input id='section-e2134a0d-041c-49a1-ba0b-406229a941d2' class='xr-section-summary-in' type='checkbox'  checked><label for='section-e2134a0d-041c-49a1-ba0b-406229a941d2' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>87.49</div><input id='attrs-8b831196-f651-48f8-9003-ca8597ed3274' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-8b831196-f651-48f8-9003-ca8597ed3274' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-3ec70484-5dcb-4239-a79f-d4d8479f4fa4' class='xr-var-data-in' type='checkbox'><label for='data-3ec70484-5dcb-4239-a79f-d4d8479f4fa4' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([87.49])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>35.29</div><input id='attrs-7bf44e5d-4f78-419c-9b75-845951928ba2' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-7bf44e5d-4f78-419c-9b75-845951928ba2' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f5efca55-e10a-454b-bc94-d1e65f394f1d' class='xr-var-data-in' type='checkbox'><label for='data-f5efca55-e10a-454b-bc94-d1e65f394f1d' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([35.29])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1989-01-02 00:00:00</div><input id='attrs-d1fa917b-5485-464a-b36a-ff7f6f600992' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-d1fa917b-5485-464a-b36a-ff7f6f600992' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-d14f8934-4572-4b6f-93d1-b359a0933fa6' class='xr-var-data-in' type='checkbox'><label for='data-d14f8934-4572-4b6f-93d1-b359a0933fa6' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1989, 1, 2, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-c9feb2a2-fc73-43b4-9fca-bd8d87736c36' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c9feb2a2-fc73-43b4-9fca-bd8d87736c36' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>mm day</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'flux_out_Q' (latitude: 1, longitude: 1)>\n",
-       "array([[4.16036419e-09]])\n",
+       "array([[1.72634888e-08]])\n",
        "Coordinates:\n",
        "  * longitude  (longitude) float64 87.49\n",
        "  * latitude   (latitude) float64 35.29\n",
-       "    time       object 1989-01-04 00:00:00\n",
+       "    time       object 1989-01-02 00:00:00\n",
        "Attributes:\n",
        "    units:    mm day"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "b6ff403c",
    "metadata": {},
    "outputs": [],
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "58255760",
    "metadata": {},
    "outputs": [],
