--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c286d206",
+   "id": "bdd675da",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81635c60",
+   "id": "bd397eb5",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69e5fa15",
+   "id": "20651025",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "901c40ab",
+   "id": "0cd3420b",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f49cd871",
+   "id": "f4730a66",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "560206a8",
+   "id": "128cc31a",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "510e8c19",
+   "id": "7949f880",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c63f9561",
+   "id": "285d7617",
    "metadata": {},
    "outputs": [
     {
@@ -294,8 +294,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "4522c147",
+   "execution_count": 6,
+   "id": "7bb0393f",
    "metadata": {
     "tags": []
    },
@@ -308,18 +308,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "740f9800",
+   "execution_count": 7,
+   "id": "b6ed6bdd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_112551/wflow_ewatercycle.ini'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_112551'))"
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_115404/wflow_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_115404'))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,38 +330,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "fc9980bd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('API.RiverRunoff', '2, m^3/s')"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# You can see that RiverRunoff has been added\n",
-    "model.parameters[-1]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d2c61424",
-   "metadata": {},
-   "source": [
-    "### 4. Running the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "c718dbaf",
+   "execution_count": 9,
+   "id": "03787441",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +344,7 @@
        "   'Inflow': '/inmaps/IF'}),\n",
        " ('run',\n",
        "  {'starttime': '1995-01-31 00:00:00 GMT',\n",
-       "   'endtime': '1995-02-28 00:00:00 GMT',\n",
+       "   'endtime': '1995-02-27 00:00:00 GMT',\n",
        "   'runinfo': 'None',\n",
        "   'timestepsecs': '86400',\n",
        "   'reinit': '0'}),\n",
@@ -529,53 +499,36 @@
        "   'RiverRunoff': '2, m^3/s'})]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[(section, dict(model.config[section])) for section in model.config.sections()]"
+    "model.parameters"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "2123d331",
+   "cell_type": "markdown",
+   "id": "84a222b1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'starttime': '1995-01-31 00:00:00 GMT',\n",
-       " 'endtime': '1995-02-28 00:00:00 GMT',\n",
-       " 'runinfo': 'None',\n",
-       " 'timestepsecs': '86400',\n",
-       " 'reinit': '0'}"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "dict(model.config['run'])"
+    "### 4. Running the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "0a85e519",
+   "execution_count": 10,
+   "id": "aff6b074",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_151912/wflow_ewatercycle.ini')"
+       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210511_115404/wflow_ewatercycle.ini')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b5ee3ddb",
+   "id": "196fa46d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "da193470",
+   "id": "8679d6c4",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6189a0d3",
+   "id": "56e4ea03",
    "metadata": {
     "tags": []
    },
@@ -1087,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4a127e1f",
+   "id": "c2cbf433",
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e8b61b50",
+   "id": "17fd75b5",
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "aa8c7d2c",
+   "id": "6cdf8eab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a6831357",
+   "id": "53d99478",
    "metadata": {},
    "outputs": [],
    "source": [
