--- a/examples/MarrmotM01.ipynb
+++ b/examples/MarrmotM01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f36e77a9",
+   "id": "d89b13cc",
    "metadata": {},
    "source": [
     "# Running Marrmot M01 using the ewatercycle system"
@@ -10,9 +10,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d4b9d52",
+   "id": "d2cabb04",
    "metadata": {},
    "source": [
+    "Make sure your ewatercycle conda environment is [activated](https://github.com/eWaterCycle/ewatercycle#install).\n",
+    "\n",
     "### 1. Copy an example case\n",
     "\n",
     "On https://github.com/wknoben/MARRMoT/tree/master/BMI/Config there is a example config file."
@@ -20,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "43b7d118-1643-436e-b37f-f2165d185420",
+   "execution_count": 6,
+   "id": "be17d259",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,19 +34,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88be25a1",
+   "id": "a8564493",
    "metadata": {},
    "outputs": [],
    "source": [
     "from ewatercycle.parametersetdb.datafiles import SubversionCopier\n",
-    "# TODO fix this\n",
     "copier = SubversionCopier('https://github.com/wknoben/MARRMoT/trunk/BMI/Config/BMI_testcase_m01_BuffaloRiver_TN_USA.mat')\n",
     "copier.save(forcing_file)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ef5c0240",
+   "id": "fd271664",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -56,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f4164f44-96dd-40d5-a108-8eafbf05db1c",
+   "execution_count": 8,
+   "id": "069ee59d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,23 +68,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "836b4415",
+   "execution_count": 13,
+   "id": "a3203d39",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('./ewatercycle.yaml', 'w') as f:\n",
     "    yaml.dump({\n",
     "        'container_engine': 'docker', # or singularity\n",
-    "        'marrmot.docker_image': 'ewatercycle/marrmot-grpc4bmi:2020.11',\n",
     "        'output_dir': './', # the directory where the model work_dir will be created\n",
     "    }, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "2a96ba9d",
+   "execution_count": 14,
+   "id": "5787b59b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a35471c3",
+   "id": "4bf3aebd",
    "metadata": {},
    "source": [
     "### 3. Setting uip the model"
@@ -100,18 +100,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4e76dea2-ec87-4ab2-a0ab-cc138b06caa1",
+   "execution_count": 11,
+   "id": "a47a6f73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/_warnings.py:18: UserWarning: \n",
+      "  Thank you for trying out the new ESMValCore API.\n",
+      "  Note that this API is experimental and may be subject to change.\n",
+      "  More info: https://github.com/ESMValGroup/ESMValCore/issues/498\n",
+      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:254: ESMValToolDeprecationWarning: `write_plots` will be removed in 2.4.0.\n",
+      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:255: ESMValToolDeprecationWarning: `write_netcdf` will be removed in 2.4.0.\n",
+      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_validated_config.py:80: MissingConfigParameter: `drs` is not defined (https://docs.esmvaltool.org/projects/ESMValCore/en/latest/quickstart/configure.html)\n"
+     ]
+    }
+   ],
    "source": [
     "import ewatercycle.models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5f0f7a32-0b64-4de6-9074-13749d5efa4d",
+   "execution_count": 12,
+   "id": "a46d2892",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +134,7 @@
        "['2020.11']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,17 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "0a4c839c",
+   "execution_count": 15,
+   "id": "c4bcdad8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ewatercycle.models.marrmot.MarrmotM01 at 0x7f9eadb7e430>"
+       "<ewatercycle.models.marrmot.MarrmotM01 at 0x7f7a0b65f9d0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,8 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "6bfc1dc0",
+   "execution_count": 16,
+   "id": "4185acc3",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +181,7 @@
        " ('forcing_file', PosixPath('BMI_testcase_m01_BuffaloRiver_TN_USA.mat'))]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,18 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "4ef7a691",
+   "execution_count": 17,
+   "id": "5b41e8f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210511_114059/marrmot-m01_config.mat'),\n",
-       " PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210511_114059'))"
+       "(PosixPath('/home/verhoes/git/eWaterCycle/ewatercycle/examples/marrmot_20210511_144425/marrmot-m01_config.mat'),\n",
+       " PosixPath('/home/verhoes/git/eWaterCycle/ewatercycle/examples/marrmot_20210511_144425'))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,8 +217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5ac41a70",
+   "execution_count": 18,
+   "id": "925fd7bd",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +231,7 @@
        " ('forcing_file', PosixPath('BMI_testcase_m01_BuffaloRiver_TN_USA.mat'))]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,8 +242,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7fe01b22",
+   "execution_count": 19,
+   "id": "8476fe8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,8 +252,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "d6eea564",
+   "execution_count": 20,
+   "id": "516620d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,8 +262,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "375de952",
+   "execution_count": 21,
+   "id": "9e12e910",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +281,7 @@
        " 'wb')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,8 +292,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "f49eabe1",
+   "execution_count": 22,
+   "id": "c7302682",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +302,7 @@
        "array([1.72634888e-08])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,8 +313,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "ec7992f4",
+   "execution_count": 23,
+   "id": "769635d6",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +678,7 @@
        "  * latitude   (latitude) float64 35.29\n",
        "    time       object 1989-01-02 00:00:00\n",
        "Attributes:\n",
-       "    units:    mm day</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'flux_out_Q'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1</li><li><span class='xr-has-index'>longitude</span>: 1</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-5c545722-998c-45ff-a23a-088a7bb876af' class='xr-array-in' type='checkbox' checked><label for='section-5c545722-998c-45ff-a23a-088a7bb876af' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>1.726e-08</span></div><div class='xr-array-data'><pre>array([[1.72634888e-08]])</pre></div></div></li><li class='xr-section-item'><input id='section-e2134a0d-041c-49a1-ba0b-406229a941d2' class='xr-section-summary-in' type='checkbox'  checked><label for='section-e2134a0d-041c-49a1-ba0b-406229a941d2' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>87.49</div><input id='attrs-8b831196-f651-48f8-9003-ca8597ed3274' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-8b831196-f651-48f8-9003-ca8597ed3274' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-3ec70484-5dcb-4239-a79f-d4d8479f4fa4' class='xr-var-data-in' type='checkbox'><label for='data-3ec70484-5dcb-4239-a79f-d4d8479f4fa4' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([87.49])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>35.29</div><input id='attrs-7bf44e5d-4f78-419c-9b75-845951928ba2' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-7bf44e5d-4f78-419c-9b75-845951928ba2' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f5efca55-e10a-454b-bc94-d1e65f394f1d' class='xr-var-data-in' type='checkbox'><label for='data-f5efca55-e10a-454b-bc94-d1e65f394f1d' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([35.29])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1989-01-02 00:00:00</div><input id='attrs-d1fa917b-5485-464a-b36a-ff7f6f600992' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-d1fa917b-5485-464a-b36a-ff7f6f600992' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-d14f8934-4572-4b6f-93d1-b359a0933fa6' class='xr-var-data-in' type='checkbox'><label for='data-d14f8934-4572-4b6f-93d1-b359a0933fa6' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1989, 1, 2, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-c9feb2a2-fc73-43b4-9fca-bd8d87736c36' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c9feb2a2-fc73-43b4-9fca-bd8d87736c36' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>mm day</dd></dl></div></li></ul></div></div>"
+       "    units:    mm day</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'flux_out_Q'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1</li><li><span class='xr-has-index'>longitude</span>: 1</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-cb05fdc0-8791-4161-ba9e-21f9b9e6f3d9' class='xr-array-in' type='checkbox' checked><label for='section-cb05fdc0-8791-4161-ba9e-21f9b9e6f3d9' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>1.726e-08</span></div><div class='xr-array-data'><pre>array([[1.72634888e-08]])</pre></div></div></li><li class='xr-section-item'><input id='section-245c5a9d-cfa8-42f8-a468-79eb9e549260' class='xr-section-summary-in' type='checkbox'  checked><label for='section-245c5a9d-cfa8-42f8-a468-79eb9e549260' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>87.49</div><input id='attrs-61cf3a69-b9ef-48b0-a17d-58fcc5912906' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-61cf3a69-b9ef-48b0-a17d-58fcc5912906' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-0b7cad63-86a3-477b-b4ba-b4b6b6eaeed3' class='xr-var-data-in' type='checkbox'><label for='data-0b7cad63-86a3-477b-b4ba-b4b6b6eaeed3' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([87.49])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>35.29</div><input id='attrs-05301898-f403-4ae8-b366-70127cf8c6c0' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-05301898-f403-4ae8-b366-70127cf8c6c0' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-2ebd69e3-14c8-469e-be35-70f837d5a200' class='xr-var-data-in' type='checkbox'><label for='data-2ebd69e3-14c8-469e-be35-70f837d5a200' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([35.29])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1989-01-02 00:00:00</div><input id='attrs-782566e0-b7ad-40e7-b7d7-99b741e0027e' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-782566e0-b7ad-40e7-b7d7-99b741e0027e' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-fe29fa16-18d8-40af-8f00-ad19f01c3062' class='xr-var-data-in' type='checkbox'><label for='data-fe29fa16-18d8-40af-8f00-ad19f01c3062' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1989, 1, 2, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-40ce0e1c-33f6-4979-90be-6acdb70156b9' class='xr-section-summary-in' type='checkbox'  checked><label for='section-40ce0e1c-33f6-4979-90be-6acdb70156b9' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>mm day</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'flux_out_Q' (latitude: 1, longitude: 1)>\n",
@@ -677,7 +691,7 @@
        "    units:    mm day"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "b6ff403c",
+   "execution_count": 24,
+   "id": "449b8563",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,8 +712,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "58255760",
+   "execution_count": 25,
+   "id": "1a3f33b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9693ae68",
+   "id": "1227c78f",
    "metadata": {},
    "outputs": [],
    "source": []
